--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Testing various methods of connection ssb-client to sbot",
   "scripts": {
-    "test": "find test/**/test.sh -execdir bash test.sh \\;"
+    "test-summary": "find test/**/test.sh -execdir bash test.sh \\; | tap-markdown --no-duration",
+    "test": "find test/**/test.sh -execdir bash -c 'bash test.sh && [[ -f sbot.log  ]] && echo -e \"\\n\\nSbot log: \\n\" && cat sbot.log' \\;"
   },
   "keywords": [
     "ssb",
@@ -16,12 +17,15 @@
     "ssb-client": "latest"
   },
   "devDependencies": {
+    "@extendscripter/tap-markdown": "^1.3.1",
     "brfs": "^2.0.1",
     "browser-run": "^5.0.0",
     "browserify": "^16.2.3",
     "budo": "^11.4.1",
     "envify": "^4.1.0",
+    "pull-stream": "^3.6.9",
     "rc": "^1.2.8",
+    "ssb-config": "^2.3.4",
     "tape": "^4.9.1"
   }
 }
